versioned_docs/version-0.10/cloud/deploy-from-helm.mdx
---
title: Launch Applications from Helm Charts
description: You can launch additional services for your development environments directly from Helm Charts
sidebar_label: From Helm Charts
id: deploy-from-helm
---

import Image from '@theme/Image';

You can launch additional services for your development environments on Okteto Cloud using Helm repositories.
Okteto automates all the processes needed to deploy, configure, upgrade, and destroy your Helm releases, so you can focus on building amazing applications.

## Deploy

Log in to [Okteto Cloud](https://cloud.okteto.com), and click on the **Launch Dev Environment** button on the top left. A deploy dialog will open.
Switch to the *From Chart* tab and a list of available services to deploy on your namespace will be shown.
The list will look something like this:

<p align="center"><Image src="/docs/cloud/images/deploy-helm.png" alt="deploy with helm" width="650" /></p>

Click on the service you want to deploy (we'll be using **Redis** in this example) to switch to the deployment configuration view of the Helm Chart. There you give it a name, select a version, and customize the configuration values. Once you're ready, click on the **Deploy** button on the bottom of the dialog to deploy your Helm release.

<p align="center"><Image src="/docs/cloud/images/deploy-redis.png" alt="deploy redis" width="650" /></p>

When you click on **Launch**, Okteto Cloud will launch an installation job for you directly in the cluster. The installation job is in charge of executing the required `helm` commands to deploy your Helm Chart.

As soon as your Helm release is deployed, you'll see its state in the UI. The UI will automatically update as the different components are created. Your Helm release will be ready to go once it reaches the `Success` state.

<p align="center"><Image src="/docs/cloud/images/ui-redis.png" alt="UI image of redis" width="850" /></p>

## Redeploy

You can also redeploy your Helm releases from Okteto Cloud. This is useful when you want to upgrade or redeploy your services.

Click on **Redeploy** on the right of your Helm release.
The *Redeploy Helm Chart* dialog shows you the available versions, as well as the configuration used to deploy the current version of the Helm release.

<p align="center"><Image src="/docs/cloud/images/redeploy-helm.png" alt="redeploy helm chart" width="650" /></p>

Select the version you want to deploy to, change the configuration if needed, then click on the **Redeploy** button to start the upgrade process. Just like when you installed the Helm release, all the changes will be reflected in your browser as they happen.

## Destroy

You can also destroy your Helm releases with a single click.
Go back to the extended view of your Helm release and click the **Destroy** button.
A confirmation dialog will pop up. Click on the **Destroy** button to confirm your actions. The Helm release and all the resources created for it will be gone:

<p align="center"><Image src="/docs/cloud/images/destroy-helm.png" alt="Destroy Helm releases" width="450" /></p>

In this case, the persistent volume created by Redis won't be deleted to avoid losing any sensitive data.
You can delete it manually from the Okteto Cloud UI if you want.

## Application Catalog

The default catalog contains building blocks like MongoDB and Redis, well-known frameworks like OpenFaaS or TensorFlow Notebooks, and a couple of commodity services like a web terminal.  Did we miss your favorite one? [Open an issue](https://github.com/okteto/charts/issues/new) to let us know. Or submit [your very own chart](https://github.com/okteto/charts/pulls) to make it available for every developer in Okteto Cloud.

You can also [bring your own Helm repository](/docs/0.10/tutorials/repos/) to the catalog and get the same one-click deployment experience for your own services.
